# espnet

./: .buildinfo  .continueignore  .coverage.bigo.29560.230812  .coveragerc  .dockerignore  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .travis.yml  404.html  CMakeLists.txt  CONTRIBUTING.md  INSTALL  LF  LICENSE  MyTTsService.py  README.html  README.mandarin.md  README.md  README.md.mandarin  README.zh_cn.md  TEST_COMPRESSED_FEATS.py  TEST_KALDI_IO.py  _tmp_text.txt  _typos.toml  a.py  about_this_doc.html  additional_citations.html  citations.html  codecov.yml  config.yaml  devcontainer.html  docker.html  document.html  espnet1_tutorial.html  espnet2_distributed.html  espnet2_format_wav_scp.html  espnet2_task.html  espnet2_training_option.html  (+33 more)
.circleci/: config.yaml  config.yml
.devcontainer/: build_image3.sh  container.env.example  devcontainer.json  espnet3.dockerfile  postCreate.sh  postcreated3.sh  runtime.dockerfile
.doctrees/: docker.doctree  environment.pickle  espnet1_tutorial.doctree  espnet2_distributed.doctree  espnet2_format_wav_scp.doctree  espnet2_task.doctree  espnet2_training_option.doctree  espnet2_tutorial.doctree  faq.doctree  index.doctree  installation.doctree  parallelization.doctree  tutorial.doctree
.gemini/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
_gen/: espnet.asr.html  espnet.bin.html  espnet.distributed.html  espnet.lm.html  espnet.mt.html  espnet.nets.html  espnet.optimizer.html  espnet.scheduler.html  espnet.st.html  espnet.transform.html  espnet.tts.html  espnet.utils.html  espnet.vc.html  espnet2.asr.html  espnet2.asr_transducer.html  espnet2.asvspoof.html  espnet2.bin.html  espnet2.diar.html  espnet2.enh.html  espnet2.fileio.html  espnet2.fst.html  espnet2.gan_codec.html  espnet2.gan_svs.html  espnet2.gan_tts.html  espnet2.hubert.html  espnet2.iterators.html  espnet2.layers.html  espnet2.lm.html  espnet2.main_funcs.html  espnet2.mt.html  espnet2.optimizers.html  espnet2.s2st.html  espnet2.s2t.html  espnet2.samplers.html  espnet2.schedulers.html  espnet2.slu.html  espnet2.speechlm.html  espnet2.spk.html  espnet2.st.html  espnet2.svs.html  (+10 more)
_modules/: index.html  logging.html
_sources/: README.md.txt  espnet2_format_wav_scp.md.txt  espnet2_task.md.txt  espnet2_tutorial.md.txt  index.rst.txt  installation.md.txt  parallelization.md.txt  tutorial.md.txt
_static/: documentation_options.js  (+1 more)
apis/: nets.html  (+4 more)
egs/lrs/avsr1/local/: CMakeLists.txt  LRS3dataprocessing.sh  Openface.sh  Openface_vidaug.sh  README.md  audio_augmentation.sh  audio_augmentation_recog.sh  audio_data_prep.sh  audioaugwav.sh  audiodump.py  avpretraindecodedump.py  avpretraindump.py  avtraindecodedump.py  avtraindump.py  convertsnr.py  creatsegfile.py  download.sh  extractfeatures.sh  extractframs.sh  extractsnr.py  extractsnr.sh  extractvfeatures.py  finetune_av.sh  finetune_av_decode.sh  finetune_video.sh  finetune_video_decode.sh  installpackage.sh  make_video.py  mhanet-1.1c_inp_tgt.p  prepaudio.py  preppretrainaudio.py  pretrain.py  pretrain_av.sh  pretrain_av_decode.sh  pretrain_video.sh  pretrain_video_decode.sh  remake_dict.py  remakeavjson.py  remakewav.py  run.sh  (+11 more)
egs/lrs/avsr1/local/dumpcreate/: audiodump.py  avpretraindecodedump.py  avpretraindump.py  avtraindecodedump.py  avtraindump.py  videodump.py
egs/lrs/avsr1/local/finetuneav/: asr.py  asr_init.py  asr_recog_avrms.py  asr_train_avrms.py  asr_utils.py  attention.py  ctc.py  ctcattweights.py  ctcencoder.py  dda.py  decoder.py  e2e_asr_transformer.py  e2e_asr_transformerdecode.py  io_utils.py  videoencoder.py
egs/lrs/avsr1/local/finetunevideo/: asr.py  asr_recog_video.py  asr_train_video.py  asr_utils.py  e2e_asr_transformerdecode.py  encoder.py  io_utils.py  lipreadingmodel.py
egs/lrs/avsr1/local/lrs3processing/audio/: create_segtext.py  kaldi_prep_nosegment.py  kaldi_prep_segment.py  segaudio.py  segmentinfo.py  sepaudiovideo.py
egs/lrs/avsr1/local/lrs3processing/video/: segvideo.py  segvideopretrain.py  segvideopretrainlocal.py
egs/lrs/avsr1/local/pretrainav/: asr.py  asr_init.py  asr_recog_pretrain_av.py  asr_train_pretrain_av.py  asr_utils.py  batchfy.py  ctc.py  ctcencoder.py  decoder.py  decoder_layer.py  e2e_asr_transformer.py  io_utils.py  label_smoothing_loss.py  rmencoder.py  shattention.py  weightctcfn.py  weightsampling.py  weighttransfn.py
egs/lrs/avsr1/local/pretrainvideo/: asr.py  asr_recog_videopretrain.py  asr_train_videopretrain.py  asr_utils.py  e2e_asr_transformer.py  io_utils.py
egs/lrs/avsr1/local/trainaudio/: asr.py  asr_recog_audio.py  asr_train_audio.py  asr_utils.py  batchfy.py  decoder.py  e2e_asr_transformer.py  io_utils.py  plot.py
egs/lrs/avsr1/local/training/: finetune_av.sh  finetune_video.sh  pretrain_av.sh  pretrain_video.sh  train_audio.sh
egs/lrs/avsr1/local/training/finetuneav/: asr.py  asr_init.py  asr_recog_avrms.py  asr_train_avrms.py  asr_utils.py  batchfy.py  ctc.py  ctcattweights.py  ctcencoder.py  dda.py  decoder.py  decoder_layer.py  e2e_asr_transformer.py  io_utils.py  label_smoothing_loss.py  lipreadingmodel.py  nets_utils.py  plot.py  rmencoder.py  videoencoder.py  weighttransfn.py
egs/lrs/avsr1/local/training/finetunevideo/: asr.py  asr_recog_video.py  asr_train_video.py  asr_utils.py  batchfy.py  ctcencoder.py  decoder.py  e2e_asr_transformer.py  encoder.py  io_utils.py  lipreadingmodel.py
egs/lrs/avsr1/local/training/pretrainav/: asr.py  asr_init.py  asr_recog_pretrain_av.py  asr_train_pretrain_av.py  asr_utils.py  attention.py  batchfy.py  ctc.py  decoder.py  decoder_layer.py  e2e_asr_transformer.py  io_utils.py  label_smoothing_loss.py  nets_utils.py  rmencoder.py  shattention.py  weightctcfn.py  weightsampling.py
egs/lrs/avsr1/local/training/pretrainvideo/: asr.py  asr_recog_videopretrain.py  asr_train_videopretrain.py  asr_utils.py  batchfy.py  ctcencoder.py  decoder.py  e2e_asr_transformer.py  io_utils.py
egs/lrs/avsr1/local/training/trainaudio/: asr.py  asr_recog_audio.py  asr_train_audio.py  asr_utils.py  batchfy.py  decoder.py  e2e_asr_transformer.py  io_utils.py
(+19965 files in other folders)
